# rich-senpai

./: .env.example  .gitignore  LICENSE  README.md  hello_world.txt  main.py  pyproject.toml  requirements.txt  short_memory.md  tui.py
.claude/spec/: README.md
.claude/spec/agent-core/: PLAN.md  PROGRESS.md  SPEC.md
core/: __init__.py  agent_core.py  audit.py  background.py  compaction.py  config.py  logging_setup.py  messaging.py  skills.py  state.py  subagent.py  sys_prompt.py  system_prompt.py  tasks_file.py  team.py  todos.py
core/llm/: __init__.py  anthropic_client.py  base.py  ollama_client.py
docs/: resume.md  revolition_plan.md
session_tui/: __init__.py  commands.py  events.py  live_panel.py  panels.py  render.py  style.py  styles.tcss  tips.py  tui.py  welcome.py  widgets.py
src/rich_senpai/: __init__.py  cli.py
src/rich_senpai/core/: __init__.py  config.py  logging_setup.py  state.py
src/rich_senpai/core/llm/: __init__.py  anthropic_client.py  base.py  deepseek_client.py  ollama_client.py
src/rich_senpai/core/unit/agent/: __init__.py  agent_core.py  compaction.py  sys_prompt.py
src/rich_senpai/core/unit/manager/: __init__.py  background.py  skills.py
src/rich_senpai/core/unit/subagent/: __init__.py  subagent.py
src/rich_senpai/core/unit/team/: __init__.py  messaging.py  tasks_file.py  team.py
src/rich_senpai/session_tui/: README.md  __init__.py  clipboard.py  commands.py  events.py  live_panel.py  panels.py  render.py  style.py  styles.tcss  tips.py  tui.py  welcome.py  widgets.py
src/rich_senpai/session_tui/assets/: banner-2.txt  banner.txt
src/rich_senpai/tools/: README.md  __init__.py  tool_register.py  tool_result.py
src/rich_senpai/tools/delegation/: __init__.py  list_teammates.py  spawn_teammate.py  task.py
src/rich_senpai/tools/file_access/: __init__.py  _diff.py  _guard.py  _session.py  edit_file.py  grep.py  read_file.py  replace_in_file.py  write_file.py
src/rich_senpai/tools/memory/: __init__.py  compress.py  idle.py  load_skill.py  recover_compacted_tool_use_result.py  todo_write.py  update_master_profile.py  update_short_memory.py  wait.py
src/rich_senpai/tools/messaging/: __init__.py  broadcast.py  plan_approval.py  read_inbox.py  send_message.py  shutdown_request.py
src/rich_senpai/tools/shell/: __init__.py  background_run.py  bash.py  check_background.py  http_request.py
src/rich_senpai/tools/task_board/: __init__.py  claim_task.py  task_create.py  task_get.py  task_list.py  task_update.py
src/rich_senpai/tools/web/: __init__.py  web_fetch.py  web_search.py
tests/: test_background.py  test_bash.py  test_compaction.py  test_diff.py  test_edit_file.py  test_guard.py  test_messaging.py  test_read_file.py  test_render.py  test_replace_in_file.py  test_session.py  test_skills.py  test_tasks_file.py  test_tool_register.py  test_write_file.py
tools/: README.md  background_run.py  bash.py  broadcast.py  check_background.py  claim_task.py  compress.py  edit_file.py  grep.py  http_request.py  idle.py  list_teammates.py  load_skill.py  plan_approval.py  read_file.py  read_inbox.py  send_message.py  shutdown_request.py  spawn_teammate.py  task.py  task_create.py  task_get.py  task_list.py  task_update.py  todo_write.py  tool_register.py  update_short_memory.py  wait.py  write_file.py
